# herald

./: .gitignore  .gitmodules  AGENTS.md  README.md  docker-compose.yml  start.sh
backend/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  app.py  bootstrap_dev_db.py  channel_dispatch.py  cli.py  config.py  database.py  edge_config.py  errors.py  logging_config.py  middleware.py  models.py  pyproject.toml  requests.py  worker.py
backend/auth/: __init__.py  jwt.py  passwords.py  sessions.py  tokens.py
backend/core/: __init__.py  crypto.py  rules.py  ssrf.py  template.py
backend/providers/: __init__.py  bark.py  gotify.py  mqtt.py  ntfy.py
backend/routes/: __init__.py  auth.py  auth_account_routes.py  auth_common.py  auth_session_routes.py  auth_token_routes.py  channels.py  ingest.py  ingest_endpoints.py  messages.py  rules.py
backend/schemas/: __init__.py  auth.py  channels.py  common.py  edge.py  ingest.py  messages.py  rules.py
backend/services/: __init__.py  auth_accounts.py  auth_sessions.py  auth_shared.py  auth_tokens.py  auth_users.py  channel_operations.py  channel_records.py  channel_validation.py  exceptions.py  ingest.py  ingest_endpoint_records.py  ingest_endpoints.py  message_records.py  messages.py  rules.py
backend/tests/: conftest.py  test_app_version.py  test_auth.py  test_core.py  test_errors.py  test_logging.py  test_middleware.py  test_providers.py  test_routes.py  test_services.py
deploy/: README.md  backend.env.example  db.env.example  docker-compose.yml  env.example  frontend.env.example
docs/: 01_prd.md  05_ui_spec.md  (+11 more)
(+17 files in other folders)
